Alignment issue

--- a/terminal.css
+++ b/terminal.css
@@ -16,10 +16,19 @@ body{
   box-shadow: 0px 1px 2px rgba(0,0,0,0.1);
 
 }
-output
-{
-  display: inherit;
-  padding-left: 10px;
+#terminal-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+output {
+    display: block;
+    padding: 0;
+    margin: 0;
+    flex: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 pre {
@@ -122,8 +131,10 @@ pre {
   text-shadow:0px 1px 0px #fff;
   text-decoration: none;
   -webkit-transform: rotate(-45deg);
-     -moz-transform: rotate(-45deg);
-       -o-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
   display: block;
   float: right;
   line-height: 14px;
@@ -184,6 +195,10 @@ pre {
     opacity: 1;
     filter: alpha(opacity=100);
     text-decoration:none;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
     transform: scale(1.1);
     transition: all 0.3s ease;
 }
